# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md
.github/workflows/: release.yml
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: equation.cpp
solver_lib/: solver.cpp  solver.h
